@@ -18,7 +18,6 @@
 package org.opengis.filter;
 
 import java.util.List;
-import java.util.Collections;
 import org.opengis.util.ScopedName;
 import org.opengis.feature.Feature;
 import org.opengis.annotation.UML;
@@ -62,7 +61,7 @@ public interface ValueReference<R,V> extends Expression<R,V> {
      */
     @Override
     default List<Expression<R,?>> getParameters() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
