@@ -18,7 +18,6 @@
 package org.opengis.metadata;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Date;
@@ -165,7 +164,7 @@ public interface Metadata {
     // Obligation note: `defaultLocale` is conditional and `otherLocale` is optional.
     @UML(identifier="defaultLocale+otherLocale", obligation=CONDITIONAL, specification=ISO_19115)
     default Map<Locale,Charset> getLocalesAndCharsets() {
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     /**
@@ -417,7 +416,7 @@ public interface Metadata {
     @Profile(level=CORE)
     @UML(identifier="metadataStandard", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getMetadataStandards() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -433,7 +432,7 @@ public interface Metadata {
      */
     @UML(identifier="metadataProfile", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getMetadataProfiles() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -445,7 +444,7 @@ public interface Metadata {
      */
     @UML(identifier="alternativeMetadataReference", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getAlternativeMetadataReferences() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -457,7 +456,7 @@ public interface Metadata {
      */
     @UML(identifier="metadataLinkage", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends OnlineResource> getMetadataLinkages() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -493,7 +492,7 @@ public interface Metadata {
      */
     @UML(identifier="spatialRepresentationInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends SpatialRepresentation> getSpatialRepresentationInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -504,7 +503,7 @@ public interface Metadata {
     @Profile(level=CORE)
     @UML(identifier="referenceSystemInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends ReferenceSystem> getReferenceSystemInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -516,7 +515,7 @@ public interface Metadata {
      */
     @UML(identifier="metadataExtensionInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends MetadataExtensionInformation> getMetadataExtensionInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -535,7 +534,7 @@ public interface Metadata {
      */
     @UML(identifier="contentInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends ContentInformation> getContentInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -562,7 +561,7 @@ public interface Metadata {
     @Profile(level=CORE)
     @UML(identifier="dataQualityInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends DataQuality> getDataQualityInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -572,7 +571,7 @@ public interface Metadata {
      */
     @UML(identifier="portrayalCatalogueInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends PortrayalCatalogueReference> getPortrayalCatalogueInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -584,7 +583,7 @@ public interface Metadata {
      */
     @UML(identifier="metadataConstraints", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Constraints> getMetadataConstraints() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -594,7 +593,7 @@ public interface Metadata {
      */
     @UML(identifier="applicationSchemaInfo", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends ApplicationSchemaInformation> getApplicationSchemaInfo() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -604,7 +603,7 @@ public interface Metadata {
      */
     @UML(identifier="acquisitionInformation", obligation=OPTIONAL, specification=ISO_19115_2)
     default Collection<? extends AcquisitionInformation> getAcquisitionInformation() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -628,6 +627,6 @@ public interface Metadata {
      */
     @UML(identifier="resourceLineage", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Lineage> getResourceLineages() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
