@@ -18,9 +18,8 @@
 package org.opengis.metadata.acquisition;
 
 import java.util.Date;
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
-
 import org.opengis.annotation.UML;
 import org.opengis.metadata.Identifier;
 import org.opengis.metadata.citation.Citation;
@@ -120,6 +119,6 @@ public interface Requirement {
      */
     @UML(identifier="satisfiedPlan", obligation=OPTIONAL, specification=ISO_19115_2)
     default Collection<? extends Plan> getSatisfiedPlans() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
