@@ -17,8 +17,8 @@
  */
 package org.opengis.metadata.content;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.util.InternationalString;
 import org.opengis.util.MemberName;
 import org.opengis.metadata.Identifier;
@@ -86,6 +86,6 @@ public interface RangeDimension {
      */
     @UML(identifier="name", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Identifier> getNames() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
