@@ -17,8 +17,8 @@
  */
 package org.opengis.metadata.extent;
 
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.util.InternationalString;
 import org.opengis.annotation.UML;
 import org.opengis.annotation.Profile;
@@ -72,7 +72,7 @@ public interface Extent {
     @Profile(level=CORE)
     @UML(identifier="geographicElement", obligation=CONDITIONAL, specification=ISO_19115)
     default Collection<? extends GeographicExtent> getGeographicElements() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -87,7 +87,7 @@ public interface Extent {
     @Profile(level=CORE)
     @UML(identifier="verticalElement", obligation=CONDITIONAL, specification=ISO_19115)
     default Collection<? extends VerticalExtent> getVerticalElements() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -102,6 +102,6 @@ public interface Extent {
     @Profile(level=CORE)
     @UML(identifier="temporalElement", obligation=CONDITIONAL, specification=ISO_19115)
     default Collection<? extends TemporalExtent> getTemporalElements() {
-        return Collections.emptyList();
+        return List.of();
     }
 }
