@@ -17,9 +17,10 @@
  */
 package org.opengis.metadata.identification;
 
+import java.util.Set;
+import java.util.List;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Iterator;
 import java.time.temporal.TemporalAmount;
 import org.opengis.util.InternationalString;
@@ -94,7 +95,7 @@ public interface Identification {
      */
     @UML(identifier="credit", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<String> getCredits() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -104,7 +105,7 @@ public interface Identification {
      */
     @UML(identifier="status", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<Progress> getStatus() {
-        return Collections.emptySet();          // Use Set instead of List for hash-safe final classes.
+        return Set.of();
     }
 
     /**
@@ -123,7 +124,7 @@ public interface Identification {
     @Profile(level=CORE)
     @UML(identifier="pointOfContact", obligation=OPTIONAL, specification=ISO_19115, version=2003)
     default Collection<? extends ResponsibleParty> getPointOfContacts() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -135,7 +136,7 @@ public interface Identification {
      */
     @UML(identifier="spatialRepresentationType", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<SpatialRepresentationType> getSpatialRepresentationTypes() {
-        return Collections.emptySet();          // Use Set instead of List for hash-safe final classes.
+        return Set.of();          // Use Set instead of List for hash-safe final classes.
     }
 
     /**
@@ -153,7 +154,7 @@ public interface Identification {
     @Profile(level=CORE)
     @UML(identifier="spatialResolution", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Resolution> getSpatialResolutions() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -170,7 +171,7 @@ public interface Identification {
      */
     @UML(identifier="temporalResolution", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends TemporalAmount> getTemporalResolutions() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -216,7 +217,7 @@ public interface Identification {
      */
     @UML(identifier="additionalDocumentation", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Citation> getAdditionalDocumentations() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -244,7 +245,7 @@ public interface Identification {
      */
     @UML(identifier="resourceMaintenance", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends MaintenanceInformation> getResourceMaintenances() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -254,7 +255,7 @@ public interface Identification {
      */
     @UML(identifier="graphicOverview", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends BrowseGraphic> getGraphicOverviews() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -266,7 +267,7 @@ public interface Identification {
      */
     @UML(identifier="resourceFormat", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Format> getResourceFormats() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -276,7 +277,7 @@ public interface Identification {
      */
     @UML(identifier="descriptiveKeywords", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Keywords> getDescriptiveKeywords() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -288,7 +289,7 @@ public interface Identification {
      */
     @UML(identifier="resourceSpecificUsage", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Usage> getResourceSpecificUsages() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -298,7 +299,7 @@ public interface Identification {
      */
     @UML(identifier="resourceConstraints", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends Constraints> getResourceConstraints() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -310,7 +311,7 @@ public interface Identification {
      */
     @UML(identifier="associatedResource", obligation=OPTIONAL, specification=ISO_19115)
     default Collection<? extends AssociatedResource> getAssociatedResources() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
