@@ -18,8 +18,8 @@
 package org.opengis.referencing;
 
 import java.util.Set;
+import java.util.List;
 import java.util.Collection;
-import java.util.Collections;
 import org.opengis.util.GenericName;
 import org.opengis.util.InternationalString;
 import org.opengis.metadata.Identifier;
@@ -138,7 +138,7 @@ public interface IdentifiedObject {
      */
     @UML(identifier="alias", obligation=OPTIONAL, specification=ISO_19111)
     default Collection<GenericName> getAlias() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
@@ -154,7 +154,7 @@ public interface IdentifiedObject {
      */
     @UML(identifier="identifier", obligation=OPTIONAL, specification=ISO_19111)
     default Set<ReferenceIdentifier> getIdentifiers() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     /**
@@ -187,7 +187,7 @@ public interface IdentifiedObject {
      */
     @UML(identifier="ObjectUsage.domain", obligation=OPTIONAL, specification=ISO_19111)
     default Collection<ObjectDomain> getDomains() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     /**
